--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="MainPage.xaml" />
+    <None Remove="StockPage\StockPage.xaml" />
     <None Remove="Test\TestPage.xaml" />
   </ItemGroup>
 
@@ -48,6 +49,9 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="LiveChartsCore" Version="2.0.0-rc5.4" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-rc5.3" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.WinUI" Version="2.0.0-rc5.3" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250310001" />
   </ItemGroup>
@@ -87,5 +91,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TransactionLog\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="StockPage\StockPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
