--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -19,6 +19,7 @@
     <Page Remove="Homepage\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Alerts\View\TriggeredAlertsPage.xaml" />
     <None Remove="MainPage.xaml" />
     <None Remove="StockPage\StockPage.xaml" />
     <None Remove="Test\TestPage.xaml" />
@@ -94,6 +95,9 @@
     <PRIResource Remove="Homepage\**" />
   </ItemGroup>
   <ItemGroup>
+    <Page Update="Alerts\View\TriggeredAlertsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <None Update="CreateStock\View\CreateStockPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
