Refactor DatabaseHelper and add SQL script support
Significantly refactored `DatabaseHelper.cs` to improve code organization and readability. Introduced nullable types, expression-bodied properties, and enhanced error handling. Consolidated database reset and table creation logic into a new method.

Added a new item group in `StockApp.csproj` to include the `CreateUserTable.sql` script for external database operations.

--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -99,4 +99,7 @@
   <ItemGroup>
     <PRIResource Remove="Homepage\**" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="SqlScripts\CreateUserTable.sql" />
+  </ItemGroup>
 </Project>
