Enhance database management with SQL scripts
Updated DatabaseHelper to utilize SQL scripts for table creation, existence checks, and database resets. Improved error handling and added LoadSqlScript method for better maintainability. Updated StockApp.csproj to include new SQL scripts. Added CheckTablesExist.sql, CreateTables.sql, and ResetDatabase.sql for comprehensive database management.

--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -100,6 +100,7 @@
     <PRIResource Remove="Homepage\**" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqlScripts\CreateUserTable.sql" />
+    <Compile Include="SqlScripts\CheckTablesExist.sql" />
+    <Compile Include="SqlScripts\CreateTables.sql" />
   </ItemGroup>
 </Project>
