--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -70,6 +70,9 @@
     </PackageReference>
     <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
+	<PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+    <PackageReference Include="Moq"                Version="4.18.4" />
   </ItemGroup>
 
   <ItemGroup>
