--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -14,6 +14,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="StockApp.ViewModels.Tests\**\*.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Remove="Homepage\**" />
     <Compile Remove="View\**" />
     <EmbeddedResource Remove="Homepage\**" />
@@ -72,7 +75,7 @@
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
 	<PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="Moq"                Version="4.18.4" />
+    <PackageReference Include="Moq" Version="4.18.4" />
   </ItemGroup>
 
   <ItemGroup>
