first commit: not using hardcoded cnps

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
-﻿{  
-   "connectionStrings": {
-    "StockApp_DB": "Server=localhost;Database=StockApp_DB;Trusted_Connection=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
-   }  
+﻿{
+    "connectionStrings": {
+        "StockApp_DB": "Server=localhost;Database=StockApp_DB;Trusted_Connection=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
+    },
+    "DefaultUserCNP": "1234567890124"
 }
