--- a/StockApp.Repository.Tests/StockApp.Repository.Tests.csproj
+++ b/StockApp.Repository.Tests/StockApp.Repository.Tests.csproj
@@ -1,20 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
-		<UseWinUI>true</UseWinUI>
-		<Platforms>AnyCPU;x64</Platforms>
-	</PropertyGroup>
+<PropertyGroup>
+	<TargetFramework>net9.0-windows10.0.26100.0</TargetFramework>
+	<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+	<RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+	<Platforms>x86;x64;ARM64</Platforms>
+	<EnablePRIResourceGeneration>false</EnablePRIResourceGeneration>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	<EnableMsixTooling>true</EnableMsixTooling>
 
-	<ItemGroup>
-		<ProjectReference Include="..\StockApp.csproj" />
-	</ItemGroup>
+</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-		<PackageReference Include="Moq" Version="4.18.4" />
-	</ItemGroup>
+<ItemGroup>
+	<ProjectReference Include="..\StockApp.csproj" />
+</ItemGroup>
+
+<ItemGroup>
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+	<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
+	<PackageReference Include="MSTest.TestAdapter" Version="3.8.3" />
+	<PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
+	<PackageReference Include="Moq" Version="4.20.72" />
+</ItemGroup>
 
 </Project>
