--- a/StockApp.Service.Tests/StockApp.Service.Tests.csproj
+++ b/StockApp.Service.Tests/StockApp.Service.Tests.csproj
@@ -1,20 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
-		<UseWinUI>true</UseWinUI>
-		<Platforms>AnyCPU;x64</Platforms>
+		<TargetFramework>net9.0-windows10.0.26100.0</TargetFramework>
+		<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+		<RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
+		<Platforms>x86;x64;ARM64</Platforms>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<EnableMsixTooling>true</EnableMsixTooling>
+		<EnablePRIResourceGeneration>false</EnablePRIResourceGeneration>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\StockApp.csproj" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+		<PackageReference Include="MSTest.TestAdapter" Version="3.8.3" />
+		<PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
+		<PackageReference Include="Moq" Version="4.20.72" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-		<PackageReference Include="Moq" Version="4.18.4" />
+	  <ProjectReference Include="..\StockApp.csproj" />
 	</ItemGroup>
 
 </Project>
