--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -26,7 +26,6 @@
     <Page Remove="Homepage\**" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="MainPage.xaml" />
     <None Remove="Test\TestPage.xaml" />
   </ItemGroup>
 
@@ -64,6 +63,7 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
@@ -75,12 +75,6 @@
 	<PackageReference Include="MSTest.TestAdapter" Version="3.8.3" />
     <PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
     <PackageReference Include="Moq" Version="4.20.72" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Page Update="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Test\TestPage.xaml">
