--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -67,14 +67,17 @@
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
 	<PackageReference Include="MSTest.TestAdapter" Version="3.8.3" />
     <PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
     <PackageReference Include="Moq" Version="4.20.72" />
+	<PackageReference Include="H.OxyPlot.WinUI" Version="0.9.30" />
+	<PackageReference Include="OxyPlot.Core" Version="2.2.0" />
+
   </ItemGroup>
   <ItemGroup>
     <Page Update="Test\TestPage.xaml">
