fixed ChatReportRepo + added proxy and updated views

--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -118,6 +118,9 @@
     <PRIResource Remove="Homepage\**" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="BankApi\BankApi.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
