--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "connectionStrings": {
-        "StockApp_DB": "Server=DESKTOP-2UI353C\\SQLEXPRESS;Database=StockApp_DB;Trusted_Connection=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
+        "StockApp_DB": "Data Source=VM;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
     },
     "DefaultUserCNP": "1234567890124"
 }
