Refactor StockPage implementation: - Replace direct repository calls with API client - Add async/await support - Implement proper DI - Add loading states and error handling

--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -93,6 +93,9 @@
 
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="BankApi\BankApi.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="Test\TestPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
