--- a/StockApp.Repository.Tests/StockApp.Repository.Tests.csproj
+++ b/StockApp.Repository.Tests/StockApp.Repository.Tests.csproj
@@ -12,15 +12,15 @@
 </PropertyGroup>
 
 <ItemGroup>
-	<ProjectReference Include="..\StockApp.csproj" />
-</ItemGroup>
-
-<ItemGroup>
 	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
 	<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
 	<PackageReference Include="MSTest.TestAdapter" Version="3.8.3" />
 	<PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
 	<PackageReference Include="Moq" Version="4.20.72" />
+</ItemGroup>
+
+<ItemGroup>
+  <ProjectReference Include="..\BankApi\BankApi.csproj" />
 </ItemGroup>
 
 </Project>
