Add transaction management features and update packages
- Added `TransactionLogTransaction` DbSet in `ApiDbContext` and configured its entity properties.
- Modified connection string in `appsettings.json` for `StockApp_DB`.
- Introduced `TransactionController` for API endpoints to manage transactions.
- Created `ITransactionRepository` interface and implemented `TransactionRepository` for data access.
- Added a placeholder `TransactionProxyRepository` class.

--- a/StockApp.csproj
+++ b/StockApp.csproj
@@ -76,6 +76,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
