--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "connectionStrings": {
-    "StockApp_DB": "Data Source=DESKTOP-MK4PKC5;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
-  },
-    "DefaultUserCNP": "1234567890124"
+    "connectionStrings": {
+        "StockApp_DB": "Data Source=VM;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    },
+    "CurrentUserCNP": "1324569871101"
 }
