--- a/BankApi/appsettings.json
+++ b/BankApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=JAMAL;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "DefaultConnection": "Data Source=VM;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
     }
 }
