--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "connectionStrings": {
-        "StockApp_DB": "Data Source=VM;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "StockApp_DB": "Data Source=NASTYCASH\\SQLEXPRESS;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
     },
     "CurrentUserCNP": "1324569871101"
 }
