--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "connectionStrings": {
-        "StockApp_DB": "Data Source=VM;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "StockApp_DB": "Data Source=JAMAL;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
     },
     "CurrentUserCNP": "9876543210987"
 }
