--- a/StockApp.Repository.Tests/StockApp.Repository.Tests.csproj
+++ b/StockApp.Repository.Tests/StockApp.Repository.Tests.csproj
@@ -12,6 +12,7 @@
 </PropertyGroup>
 
 <ItemGroup>
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
 	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
 	<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
@@ -25,7 +26,6 @@
 	<PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
 	<PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
 	<PackageReference Include="System.Runtime.Handles" Version="4.3.0" />
-	<PackageReference Include="xunit" Version="2.9.3" />
 </ItemGroup>
 
 <ItemGroup>
