Port LoansView and LoanRequestView

--- a/StockAppWeb/StockAppWeb.csproj
+++ b/StockAppWeb/StockAppWeb.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
