--- a/StockAppWeb/appsettings.json
+++ b/StockAppWeb/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ApiBase": "https://localhost:7001",
   "Jwt": {
-    "Key": "YourSecretKeyHere123456789012345678901234",
-    "Issuer": "StockAppApi",
-    "Audience": "StockAppWeb"
+    "Key": "your-secure-key-at-least-16-characters-long",
+    "Issuer": "BankApi",
+    "Audience": "Users"
   }
 }
