updated create stock page + added to homepage stocks

--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -107,6 +107,7 @@
     <None Remove="Views\Pages\LoginPage.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BankApi\BankApi.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
   <ItemGroup>
