--- a/BankApi/appsettings.json
+++ b/BankApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=VM;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=MINNIE;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
   "Jwt": {
     "Key": "your-secure-key-at-least-16-characters-long",
