--- a/BankApi/appsettings.json
+++ b/BankApi/appsettings.json
@@ -6,8 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "AllowedOrigins": [ "https://localhost:7001", "https://localhost:7021" ],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MINNIE;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=VM;Initial Catalog=StockApp_DB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
   "Jwt": {
     "Key": "your-secure-key-at-least-16-characters-long",
