make Home redirect to correct page, implement Loan creation on StockApp

--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -102,6 +102,7 @@
     <PRIResource Remove="Homepage\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Views\Components\CreateLoanDialog.xaml" />
     <None Remove="Views\Components\LoginComponent.xaml" />
     <None Remove="Views\Components\UserAuthStatusComponent.xaml" />
     <None Remove="Views\Pages\LoginPage.xaml" />
@@ -114,6 +115,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\Components\CreateLoanDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Views\Components\LoginComponent.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
